--- a/css/style.css
+++ b/css/style.css
@@ -1377,3 +1377,19 @@ a.boxclose {
 	width: 273px;
 }
 }
+
+.video-container {
+	position:relative;
+	padding-bottom:56.25%;
+	padding-top:30px;
+	height:0;
+	overflow:hidden;
+}
+
+.video-container iframe, .video-container object, .video-container embed {
+	position:absolute;
+	top:0;
+	left:0;
+	width:100%;
+	height:100%;
+}
