--- a/css/style.css
+++ b/css/style.css
@@ -245,9 +245,8 @@ span{
 	margin:1em 0em;
 }
 .learn {
-	background: #fff;
+	background: none;
 	color: #fff;
-	opacity: 0.6;
 	text-decoration: none;
 	font-size: 22px;
 	font-weight: 400;
@@ -265,9 +264,16 @@ span{
 	margin:1em 0em 0em;
 }
 .learn:hover{
-	background:#fff;
-	border:1px solid #fff;
-	opacity: 1;
+	background:#E74C3C;
+	border:1px solid #E74C3C;
+	transition:0.5s all;
+	-webkit-transition:0.5s all;
+	-moz-transition:0.5s all;
+	-o-transition:0.5s all;
+	-ms-transition:0.5s all;
+}
+.learn a{
+	color: #fff;
 }
 .branding {
 	text-align:center;
