--- a/css/style.css
+++ b/css/style.css
@@ -244,7 +244,7 @@ span{
 	font-weight:800;
 	margin:1em 0em;
 }
-.learn {
+.learn a{
 	background: none;
 	color: #fff;
 	text-decoration: none;
@@ -263,7 +263,7 @@ span{
 	-msborder-radius: 3px;
 	margin:1em 0em 0em;
 }
-.learn:hover{
+.learn a:hover{
 	background:#E74C3C;
 	border:1px solid #E74C3C;
 	transition:0.5s all;
@@ -271,9 +271,6 @@ span{
 	-moz-transition:0.5s all;
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
-}
-.learn a{
-	color: #fff;
 }
 .branding {
 	text-align:center;
