--- a/css/style.css
+++ b/css/style.css
@@ -992,7 +992,7 @@ a.boxclose {
 .banner-info h1 {
 	font-size: 2em;
 }
-.learn {
+.learn a {
 	font-size: 19px;
 }
 .mobi label {
@@ -1111,7 +1111,7 @@ i.accent {
 .banner-info p {
 	font-size: 1em;
 }
-.learn {
+.learn a {
 	font-size: 17px;
 }
 .banner-info {
@@ -1200,7 +1200,7 @@ padding: 1em 15em;
 	font-size: 1.5em;
 	margin: 0em 0em;
 }
-.learn {
+.learn a {
 	font-size: 15px;
 }
 .banner {
@@ -1309,7 +1309,7 @@ a.view {
 	font-size: 0.9em;
 	margin:0.5em 0em;
 }
-.learn {
+.learn a {
 	font-size: 12px;
 }
 .header {
